# umu-aries-framework-go

./: Makefile  README.md  README.mdOLD  cert.pem  go.mod  go.sum  key.pem  servercert.pem  serverkey.pem
certs/: csr.pem  servercert1.pem
modules/p-abc/: CMakeLists.txt  README.md  setupscript.sh
modules/p-abc/lib/pfecCwrapper/: CMakeLists.txt
modules/p-abc/lib/pfecCwrapper/lib/Miracl_BLS12381_64b/: ecdh_BLS12381.h
modules/p-abc/lib/pfecCwrapper/lib/miracl-core-c/: config32_mod.py
modules/p-abc/lib/pfecCwrapper/src/Miracl_BLS12381_32b/: Zp.c  g1.c  g2.c  pair.c  types.h
modules/p-abc/lib/pfecCwrapper/src/Miracl_BLS12381_64b/: Zp.c  g1.c  g2.c  pair.c  types.h
modules/p-abc/lib/pfecCwrapper/src/example/: main_test.c
modules/p-abc/lib/pfecCwrapper/test/: testG1.c  testG2.c  testZp.c
modules/p-abc/src/PSMS/: Dpabc.c
modules/p-abc/src/example/: main.c
modules/p-abc/test/: main.c
pkg/crypto/customtinkcrypto/: crypto.go
pkg/vdr/fabric/: creator.go  did.go
scripts/: generate_test_keys.sh
scripts/fabric/: run_fabric.sh
scripts/poc/: device_config.env
test/bdd/fixtures/agent-rest/: .env  docker-compose.yml
test/bdd/fixtures/agent-rest/data/: connection-profile.json
test/bdd/fixtures/demo/openapi/: docker-compose.yml
test/bdd/fixtures/demo/openapi/specs/: openapi-localhost:8082.yml  openapi-localhost:9082.yml
test/bdd/fixtures/keys/tls/: ec-cacert.pem  ec-cacert.srl  ec-cakey.pem  ec-key.csr  ec-key.pem  ec-pubCert.pem  secret-lock.key
